# org

./: CMakeLists.txt  README.md  main.cpp  mainwindow.ui  org.pro
.github/workflows/: ci.yml
